[gd_scene load_steps=7 format=3 uid="uid://b5yvyahdofylv"]

[ext_resource type="Script" path="res://AttacksAndHitboxes/Tim/Special Command Four Tim.gd" id="1_sg42d"]
[ext_resource type="Texture2D" uid="uid://c7fdbbl5hi3dd" path="res://Character Sprites/Timothy Base Spritesheet png.png" id="2_7a5me"]

[sub_resource type="Animation" id="Animation_fw426"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 6)]
}

[sub_resource type="Animation" id="Animation_h0o8c"]
resource_name = "Spin"
length = 0.44
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.000269063, 0.0190332, 0.0364941, 0.0548238, 0.0728515, 0.0910714, 0.109863, 0.129799, 0.149162, 0.168526, 0.187096, 0.205766, 0.223907, 0.242048, 0.26019, 0.278816, 0.297239, 0.314896, 0.3311, 0.348273, 0.365196, 0.381889, 0.399473, 0.417367),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6), Vector2i(8, 6), Vector2i(9, 6), Vector2i(10, 6), Vector2i(11, 6), Vector2i(12, 6), Vector2i(13, 6), Vector2i(14, 6), Vector2i(15, 6), Vector2i(16, 6), Vector2i(17, 6), Vector2i(18, 6), Vector2i(19, 6), Vector2i(20, 6), Vector2i(21, 6), Vector2i(22, 6), Vector2i(23, 6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlnlk"]
_data = {
"RESET": SubResource("Animation_fw426"),
"Spin": SubResource("Animation_h0o8c")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jhjfs"]
radius = 13.0

[node name="Special Command Four Tim" type="Area2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_sg42d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(72, -110)
scale = Vector2(2, 2)
texture = ExtResource("2_7a5me")
hframes = 24
vframes = 38
frame = 144

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_xlnlk")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(72, -110)
shape = SubResource("CircleShape2D_jhjfs")

[node name="HitBoxTimer" type="Timer" parent="."]
wait_time = 11.241

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="HitBoxTimer" to="." method="_on_hit_box_timer_timeout"]
